text-align corrected
by reducing the font size and align items to moblie responsive view

--- a/src/asserts/css/styles.css
+++ b/src/asserts/css/styles.css
@@ -453,8 +453,8 @@ form .message{
 } */
 
 .info h3{
-  text-align: justify;
-  font-size: x-large;
+  text-align: left;
+  font-size: large;
 }
 .contact h3{
   text-align: center;
